# onetimesecret

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: secrets.py
app/core/: config.py  sercurity.py
app/db/: session.py
tests/: conftest.py  utils.py
tests/api/api_v1/: test_secrets.py
